[package]
name = "hyper_cached_proxy"
version = "0.1.0"
authors = ["Doron Aviguy<doronaviguy@gmail.com>"]
edition = "2018"

[dependencies]
tokio = "0.1"
hyper = "0.12"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures="0.1.25"
pretty_env_logger="*"
url = "1.7.1"
lazy_static="*"
ttl_cache="*"
